frontend/src/App.css
/* ... */
/** Combined article list */

.GoliathSplitViewArticleListActionBar {
  background-color: var(--action-bar-background-color);
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-end;
  width: 100%;
  gap: 10px;
  padding: 10px;
  border-bottom: 1px solid var(--action-bar-border-color);
}

.GoliathArticleListBox.MuiBox-root {
  height: 100vh;
  padding: 0 24px;
  overflow-y: auto;
}

/** Split article list */

.GoliathSplitViewArticleListContainer.MuiContainer-root {
  padding: 0;
  display: flex;
  width: 100%;
}

.GoliathSplitViewArticleListContainer .MuiGrid-root {
  height: fit-content;
}

.GoliathArticleListColumn {
  height: 100vh;
  width: 30vw;
  flex-shrink: 0;
  background-color: var(--article-list-background-color);
}

.GoliathSplitViewArticleListBox {
  overflow-y: auto;
  width: 100%;
  flex-grow: 1;
}

.GoliathArticleFeed {
  align-items: center;
  font-size: 16px;
  display: flex;
  min-width: 0;
  overflow: hidden;
}

.GoliathArticleFeedTitle {
  padding-left: 5px;
  font-family: var(--primary-sans-serif-font), sans-serif;
  color: var(--primary-font-color);
  margin: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.GoliathArticleListBase.MuiPaper-root {
  /* Fixed size to optimize scrolling */
  height: 182px;
  border-bottom: 1px solid var(--action-bar-border-color);
  /* Explicitly set this to avoid non-composited animations when scrolling */
  box-shadow: none;
  background-color: var(--article-list-background-color);
  cursor: pointer;
}

.GoliathArticleListRead.MuiPaper-root {
  color: var(--article-header-read-font-color);
}

.GoliathArticleListSelected.GoliathArticleListRead.MuiPaper-root {
  color: var(--article-header-read-font-color-selected);
}

.GoliathArticleListSelected.MuiPaper-root {
  background-color: var(--card-selected-background-color);
}

.GoliathArticleListGrid.MuiGrid-root {
  padding: 10px;
}

.GoliathArticleListTitleGrid.MuiGrid-root {
  width: 100%;
}

.GoliathArticleListTitleType.MuiTypography-root,
.GoliathArticleListTitleType.MuiTypography-root a {
  width: 100%;
  color: var(--primary-font-color);
  text-decoration-line: none;
  font-family: var(--primary-serif-font), serif;
  font-size: 20px;
}

.GoliathArticleListMeta {
  display: flex;
}

.GoliathArticleListMetaChip.MuiChip-root {
  font-family: var(--primary-sans-serif-font), sans-serif;
}

.GoliathArticleListContent {
  padding-top: 5px;
}

.GoliathArticleListImagePreviewFigure {
  width: 100px;
  height: 100px;
  overflow: hidden;
  position: relative;
  margin: 0 10px 0 0;
  border-radius: 10px;
}

.GoliathArticleListImagePreview {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}

.GoliathArticleListRead.MuiPaper-root .GoliathArticleListImagePreview {
  filter: grayscale(100%);
}

.GoliathSplitViewArticleListTitleDivider.MuiDivider-root::before {
  width: 0;
}

.GoliathArticleContentPreviewGrid.MuiGrid-root {
  height: 100px;
}

.GoliathArticleContentPreview.MuiTypography-root {
  font-size: 16px;
  font-family: var(--primary-serif-font), serif;
  overflow: hidden;
  text-overflow: 'ellipsis';
  display: -webkit-box;
  -webkit-line-clamp: 4;
  line-clamp: 4;
  -webkit-box-orient: vertical;
}

/******************************************************************************
 * Article
 ******************************************************************************/

.GoliathArticleCardColumn {
  height: 100vh;
}

.GoliathSplitViewArticleOuter {
  border-left: 1px solid var(--action-bar-border-color);
  flex-grow: 1;
  min-width: 0;
}

.GoliathSplitViewArticleContainer {
  overflow-y: auto;
  background: var(--article-background-color);
  color: var(--article-font-color);
}

.GoliathSplitViewArticleContainer .MuiCard-root {
  background-color: var(--card-header-background-color);
  backdrop-filter: blur(10px);
}

.GoliathHeaderContainer .MuiCardHeader-root {
  padding: 0;
}

.GoliathHeaderContainer {
  position: sticky;
  top: 0;
}

.GoliathArticleHeader {
  display: flex;
  align-items: stretch;
  justify-content: space-between;
  border-bottom: 1px solid var(--action-bar-border-color);
}

.GoliathArticleHeader p,
.GoliathArticleHeader a {
  color: var(--article-header-unread-font-color);
  text-decoration: none;
}

.GoliathArticleHeaderRead p,
.GoliathArticleHeaderRead a {
  color: var(--article-header-read-font-color);
  text-decoration: none;
}

.GoliathArticleTitle {
  width: 100%;
  font-family: var(--primary-serif-font), serif;
  font-size: 24px;
  padding: 10px 10px 0 24px;
}

.GoliathArticleTitle a {
  overflow-wrap: break-word;
  color: var(--article-font-color);
}

.GoliathSplitViewArticleCardActionBar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
  background-color: var(--action-bar-background-color);
  border-bottom: 1px solid var(--action-bar-border-color);
}

.GoliathHeaderActionButtons {
  display: flex;
  justify-content: space-between;
  gap: 20px;
}

.GoliathArticleSubheader {
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding: 0 24px 10px 24px;
}

.GoliathArticleMeta {
  display: flex;
  padding-top: 5px;
  line-height: 16px;
  font-family: var(--primary-serif-font), serif;
}

.GoliathArticleDate.MuiChip-root {
  color: var(--article-date-color);
  font-family: var(--primary-sans-serif-font), sans-serif;
}

.GoliathArticleContent {
  font-size: 16px;
  font-family: var(--primary-serif-font), serif;
  color: var(--article-font-color);
  padding: 0 0 0 30px;
}

.GoliathSplitViewArticleContent {
  font-size: 18px;
  font-family: var(--primary-serif-font), serif;
  color: var(--article-font-color);
  padding: 24px;
  height: 100vh;
  max-width: 100%;
}

.GoliathSplitViewArticleContent * {
  max-width: 100%;
  overflow-wrap: break-word;
}

.GoliathSplitViewArticleContent pre,
.GoliathSplitViewArticleContent code {
  white-space: pre-wrap;
}
/* ... */

